[project]
name = "hyperflask"
version = "0.5.1"
description = "Full stack web framework"
authors = [
    {"name" = "Maxime Bouroumeau-Fuseau", email = "maxime.bouroumeau@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "flask-assets-pipeline ~=0.8",
    "flask-babel-hyper ~=5.1",
    "flask-collections ~=0.3",
    "flask-configurator ~=0.1",
    "flask-debugtoolbar ~=0.16",
    "flask-file-routes ~=0.3",
    "flask-files ~=0.2",
    "flask-geo ~=0.1",
    "flask-mailman-templates ~=0.1",
    "flask-mercure-sse ~=0.4",
    #"flask-observability ~=0.1"
    "flask-sqlorm ~=0.3",
    "flask-super-macros ~=0.2",
    "flask-suspense ~=0.3",
    "flask-wtf ~=1.2",
    "frozen-flask ~=1.0",
    "dramatiq>=1.18.0",
    "dramatiq-sqlite ~=0.1",
    "gunicorn ~=23.0",
    "honcho ~=2.0",
    "html-sanitizer ~=2.6",
    "htmx-flask ~=0.1",
    "jinja-layout ~=0.5",
    "jinja-wtforms ~=0.2",
    "periodiq ~=0.13",
    "python-slugify ~=8.0.4",
    "watchdog>=6.0.0",
    "pillow>=11.3.0",
]

[tool.uv.sources]
periodiq = { git = "https://gitlab.com/bersace/periodiq" }

[project.urls]
Repository = "https://github.com/hyperflask/hyperflask"

[project.scripts]
hyperflask = "hyperflask.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
